--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,4 +1,18 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Track me"
+        android:id="@+id/switch1"
+        android:layout_gravity="right"
+        android:checked="false"
+        android:paddingRight="2dp"
+        android:paddingTop="2dp" />
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
@@ -6,3 +20,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.thinkful.mapper.MapsActivity" />
+
+
+</LinearLayout>
